welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:2: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
  if (vacation == false && day = 1 _ day = 2 _ day = 3 _ day = 4 _ day = 5) {
                        ^alarmClock:2: error: _ must follow method; cannot follow Int(1)
  if (vacation == false && day = 1 _ day = 2 _ day = 3 _ day = 4 _ day = 5) {
                                 ^alarmClock:5: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
  else if (vacation == false && day = 6 || day = 7){
                             ^alarmClock:5: error: value || is not a member of Int
  else if (vacation == false && day = 6 || day = 7){
                                        ^alarmClock:8: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
  else if (vacation == true && day = 1 || day = 2 || day = 3 || day = 4 || day = 5){
                            ^alarmClock:8: error: value || is not a member of Int
  else if (vacation == true && day = 1 || day = 2 || day = 3 || day = 4 || day = 5){
                                       ^alarmClock:8: error: value || is not a member of Int
  else if (vacation == true && day = 1 || day = 2 || day = 3 || day = 4 || day = 5){
                                                  ^alarmClock:8: error: value || is not a member of Int
  else if (vacation == true && day = 1 || day = 2 || day = 3 || day = 4 || day = 5){
                                                             ^alarmClock:8: error: value || is not a member of Int
  else if (vacation == true && day = 1 || day = 2 || day = 3 || day = 4 || day = 5){
                                                                        ^alarmClock:11: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
  else if (vacation == true && day = 6 || day = 7){
                            ^alarmClock:11: error: value || is not a member of Int
  else if (vacation == true && day = 6 || day = 7){
                                       ^alarmClock:11: error: type mismatch;
 found   : Unit
 required: String
  else if (vacation == true && day = 6 || day = 7){
       ^